[integration][eva] feature: test get /employees will return all employees

--- a/spring-boot-employee/src/test/resources/application.yml
+++ b/spring-boot-employee/src/test/resources/application.yml
@@ -10,7 +10,11 @@ spring:
     hibernate:
       ddl-auto: none
     database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
 
   h2:
     console:
       enabled: true
+
+  flyway:
+    location: classpath:db/migration
